@@ -1,5 +1,10 @@
 2002-09-17  Marcus Brinkmann  <marcus@gnu.org>
 
+	* pc-kbd.c (input_loop): Move code that toggles NumLock after code
+	that handles direct entry of character codes with RightAlt.
+
+2002-09-17  Marcus Brinkmann  <marcus@gnu.org>
+
 	* Makefile, bdf.c, bdf.h, bell.h, console.c, display.h, driver.c,
 	driver.h, generic-speaker.c, input.h, pc-kbd.c, timer.c, timer.h,
 	unicode.h, vga.c, vga-dynacolor.c, vga-dynacolor.h, vga-dynafont.c,
